added link fir 1st project

--- a/assests/index.html
+++ b/assests/index.html
@@ -58,8 +58,10 @@
         <h1 class="headings">SERVICES</h1>
         <div class="row">
             <div class="box">
+                <a href="https://baker-ling.github.io/osu_bcs_project1/index.html">
                 <h1 class="headings">Front end development</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nostrum possimus nulla dolor asperiores dolores sint cupiditate reprehenderit vero doloribus aperiam temporibus iure inventore, a ex veritatis eum! Numquam, laboriosam?</p>
+            </a>
+                <p>My first project created was a translator for note taking. This project I helped build is functioning with some flaws, but is very promising and can be used in everyday setting or for business. </p>
             </div>
     
         <div class="box">
